src/objects/Int_Collateral_Agreement__c.object
<CustomObject>
    <description>Int Junction Object for Collateral &amp; Agreement objects.</description>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agreement Name</description>
        <label>Agreement Name</label>
        <referenceTo>Int_Agreement__c</referenceTo>
        <relationshipLabel>Int Collaterals Agreements</relationshipLabel>
        <relationshipName>Int_Collaterals_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <description>Agreement Number</description>
        <label>Agreement Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Source_System__c</fullName>
        <description>Agreement Source System</description>
        <label>Agreement Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Collateral Name</description>
        <label>Collateral Name</label>
        <referenceTo>Int_Collateral__c</referenceTo>
        <relationshipLabel>Int Collaterals Agreements</relationshipLabel>
        <relationshipName>Int_Collaterals_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collateral_Number__c</fullName>
        <description>Collateral Number</description>
        <label>Collateral Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Source_System__c</fullName>
        <description>Collateral Source System</description>
        <label>Collateral Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Type__c</fullName>
        <description>Collateral Type</description>
        <label>Collateral Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <label>Int Collateral Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Source_System__c</columns>
        <columns>Agreement_Number__c</columns>
        <columns>Collateral_Source_System__c</columns>
        <columns>Collateral_Number__c</columns>
        <columns>Collateral_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAI-{00000000}</displayFormat>
        <label>Collateral Agreement Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Collaterals Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>